scrollbar style changed Scrollbar style is ugly when more stories has to view. With CSS scrollbar style fixed for more stories

--- a/css/main.css
+++ b/css/main.css
@@ -37,3 +37,34 @@
   overflow-y: hidden;
   white-space: nowrap;
 }
+
+#trayContainer::-webkit-scrollbar {
+  width: 4px;
+  border-radius: 4px;
+}
+
+#trayContainer:hover::-webkit-scrollbar-track,
+#trayContainer:focus::-webkit-scrollbar-track,
+#trayContainer:active::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.04);
+}
+
+#trayContainer:hover::-webkit-scrollbar-thumb,
+#trayContainer:focus::-webkit-scrollbar-thumb,
+#trayContainer:active::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+#trayContainer::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background-color: transparent;
+}
+
+#trayContainer::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: transparent;
+}
+
+#trayContainer::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.6);
+}
